@@ -1,4 +1,5 @@
 0.07
+ - Skip undefined value in check_isa().
 
 0.06 2022-01-15T15:58:52+01:00
  - Add check_array().
